--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="index_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/chocolate-fonts.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6ec999a7e884f59876964ddeb70364a","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x0f26fd3241c4f3a8de313f2c4058399","expires":1}</script>
     <script src="index_files/himalaya-1.1.0/himalaya.js"></script>
     <script src="index_files/js-cookie-3.0.0/js.cookie.js"></script>
     <link href="index_files/editable-0.2.6/editable.css" rel="stylesheet" />
@@ -349,12 +349,11 @@ $$
 $$
 &lt;span style="font-size:20px"&gt; ¿Cómo se calcula el área bajo gráficas de funciones? &lt;span style="color:darkred"&gt; Con integrales. &lt;/span&gt;
 
+&lt;/br&gt;
 
 &lt;span style="font-size:20px"&gt; Tenemos que
 
-&lt;span style="font-size:20px"&gt; $$
-\int_{0}^{a} \color{red}{g}(x) dx + \int_{0}^{b} \color{blue}{h}(x) dx = \int_{0}^{c} \color{darkgreen}{f}(x) dx
-$$
+&lt;span style="font-size:20px"&gt; `$$\int_{0}^{a} \color{red}{g}(x) dx + \int_{0}^{b} \color{blue}{h}(x) dx = \int_{0}^{c} \color{darkgreen}{f}(x) dx$$`
 ]
 
 ---
@@ -366,38 +365,64 @@ class: inverse, center
 
 &lt;/br&gt;
 
-&lt;span style="font-size:35px;color:white"&gt; ¿Y la forma del Universo?
+&lt;span style="font-size:40px;color:white"&gt; ¿Y la forma del Universo?
 
 ---
-# Paralelas
+# El quinto postulado
 
-Dejar esto al final para usarlo de inmediato: explicar el quinto postulado
+&lt;img src="transversal3_0.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
+# Empecemos cerca: este salón
 
-
-# Empecemos más cerca: este salón
-
-Sugerir que el mundo es plano
+&lt;img src="salon.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 # Vamos más lejos: nuestro Planeta
 
-Poner un dibujo de un triángulo con 3 ángulos rectos
+&lt;img src="Triangle_trirectangle.png" width="70%" style="display: block; margin: auto;" /&gt;
+
+---
+# ¿Infinitas paralelas?
+&lt;img src="rectas_disco_Poincare.jpg" width="70%" style="display: block; margin: auto;" /&gt;
 
 ---
 # Ahora, en pequeño: unas papitas
 
-Hablar de geometría hiperbólica: mencionar que no hay triángulos de 180°
-Hablar de los problemas si el mundo fuera así
+&lt;img src="papita.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 # ¿Qué sabemos?
 
-Mencionar a Gauss y sus mediciones
-Hablar de mediciones más recientes
----
+.pull-left[
+&lt;/br&gt;
 
+&lt;img src="gauss.jpeg" width="110%" style="display: block; margin: auto;" /&gt;
+
+&lt;small&gt; Fotograma de la película **Midiendo el numdo**. Se observa a Gauss midiendo triángulos junto a su esposa.
+]
+
+.pull-right[
+
+&lt;/br&gt;
+
+&lt;/br&gt;
+
+* &lt;span style="font-size:20px"&gt; Gauss fue un pionero en la idea de medir triángulos.
+
+&lt;/br&gt;
+* &lt;span style="font-size:20px"&gt; Se han realizado mediciones con mayor precisión, incluso entre estrellas, pero los resultados no son concluyentes.
+]
+---
+class: inverse, center
+
+&lt;/br&gt;
+
+&lt;/br&gt;
+
+&lt;/br&gt;
+
+&lt;span style="font-size:40px;color:white"&gt; ¡Gracias!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
