correccion área círculo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="index_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/chocolate-fonts.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x0f26fd3241c4f3a8de313f2c4058399","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x618fa3ed113443e8b71e85c056ace73","expires":1}</script>
     <script src="index_files/himalaya-1.1.0/himalaya.js"></script>
     <script src="index_files/js-cookie-3.0.0/js.cookie.js"></script>
     <link href="index_files/editable-0.2.6/editable.css" rel="stylesheet" />
@@ -282,20 +282,21 @@ $$
 
 .pull-right[
 
-&lt;/br&gt;
-&lt;/br&gt;
 
 &lt;span style="font-size:20px"&gt; El área de medío círculo de radio `\(\color{darkblue}{r}\)` es 
 
 &lt;span style="font-size:20px"&gt; $$
-\text{Área(semicírculo)} = \pi\color{darkblue}{r}^2
+\text{Área(semicírculo)} = \frac{\pi}{2}\color{darkblue}{r}^2
 $$
-&lt;span style="font-size:20px"&gt; Entonces, si los **catetos** miden `\(\color{red}{a}\)` y `\(\color{blue}{b}\)` y la hipotenusa mide `\(\color{darkgreen}{c}\)` tenemos que
+&lt;span style="font-size:20px"&gt; Entonces, si los **catetos** miden `\(\color{red}{a}\)` y `\(\color{blue}{b}\)` y la hipotenusa mide `\(\color{darkgreen}{c}\)` tenemos que los respectivos radios son `\(\frac{\color{red}{a}}{2}\)`, `\(\frac{\color{blue}{b}}{2}\)` y `\(\frac{\color{darkgreen}{c}}{2}\)`, por lo cual:
 
 &lt;span style="font-size:20px"&gt; $$
 `\begin{aligned}
-\pi \color{red}{a}^2 + \pi \color{blue}{b}^2 &amp; = \pi \left( \color{red}{a}^2 + \color{blue}{b}^2 \right) \\
-&amp; = \pi \color{darkgreen}{c}^2
+\frac{\pi}{2} \left(\frac{\color{red}{a}}{2}\right)^2 + \frac{\pi}{2} \left(\frac{\color{blue}{b}}{2}\right)^2 &amp; = \frac{\pi}{2} \left( \frac{\color{red}{a}^2}{4} + \frac{\color{blue}{b}^2}{4} \right) \\
+&amp; = \frac{\pi}{8} \left( \color{red}{a}^2 + \color{blue}{b}^2\right) \\
+&amp; = \frac{\pi}{8} \color{darkgreen}{c}^2 \\
+&amp; = \frac{\pi}{2} \left(\frac{\color{darkgreen}{c}^2}{4}\right) \\
+&amp; = \frac{\pi}{2} \left(\frac{\color{darkgreen}{c}}{2}\right)^2
 \end{aligned}`
 $$
 
