--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="index_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/chocolate-fonts.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x33dff37c612452fa12ee0df26c9232d","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c9815da4c8904846a77042f9d55b8df4","expires":1}</script>
     <script src="index_files/himalaya-1.1.0/himalaya.js"></script>
     <script src="index_files/js-cookie-3.0.0/js.cookie.js"></script>
     <link href="index_files/editable-0.2.6/editable.css" rel="stylesheet" />
@@ -374,6 +374,13 @@ class: inverse, center
 &lt;img src="transversal3_0.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
+# Ángulos interiores de un triángulo
+
+
+&lt;img src="suma_interiores.png" width="150%" style="display: block; margin: auto;" /&gt;
+Tomada de [Demostración suma de ángulos interiores de un triángulo](https://matematicalatex.blogspot.com/2017/09/demostracion-suma-de-angulos-interiores.html).
+
+---
 # Empecemos cerca: este salón
 
 &lt;img src="salon.png" width="80%" style="display: block; margin: auto;" /&gt;
@@ -390,7 +397,9 @@ class: inverse, center
 ---
 # Ahora, en pequeño: unas papitas
 
-&lt;img src="papita.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;/br&gt;
+
+&lt;img src="papita2.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 # ¿Qué sabemos?
@@ -414,6 +423,14 @@ class: inverse, center
 &lt;/br&gt;
 * &lt;span style="font-size:20px"&gt; Se han realizado mediciones con mayor precisión, incluso entre estrellas, pero los resultados no son concluyentes.
 ]
+
+---
+
+&lt;/br&gt;
+&lt;img src="universe.png" width="110%" style="display: block; margin: auto;" /&gt;
+
+Captura tomada de [How One Line in the Oldest Math Text Hinted at Hidden Universes](https://youtu.be/lFlu60qs7_4?si=0r5vT2NEjHLiiXa_).
+
 ---
 class: inverse, center
 
