--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="index_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/chocolate-fonts.css" rel="stylesheet" />
     <link href="index_files/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c9815da4c8904846a77042f9d55b8df4","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2b5b8b5ed594589b49bc1215c4ce1f9","expires":1}</script>
     <script src="index_files/himalaya-1.1.0/himalaya.js"></script>
     <script src="index_files/js-cookie-3.0.0/js.cookie.js"></script>
     <link href="index_files/editable-0.2.6/editable.css" rel="stylesheet" />
@@ -377,7 +377,7 @@ class: inverse, center
 # Ángulos interiores de un triángulo
 
 
-&lt;img src="suma_interiores.png" width="150%" style="display: block; margin: auto;" /&gt;
+&lt;img src="suma_interiores.PNG" width="150%" style="display: block; margin: auto;" /&gt;
 Tomada de [Demostración suma de ángulos interiores de un triángulo](https://matematicalatex.blogspot.com/2017/09/demostracion-suma-de-angulos-interiores.html).
 
 ---
